--- a/streams/client/.env
+++ b/streams/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_GOOGLE_OAUTH2_API_KEY=API_KEY
-REACT_APP_API_URL=API_URL
+REACT_APP_API_URL=http://localhost:3001
+REACT_APP_RTMP_URL=http://localhost:8000/live/
